--- a/documentos/arquivos/style.css
+++ b/documentos/arquivos/style.css
@@ -39,9 +39,13 @@ h4 {
     font-size: 30px;
 }
 
+h6 {
+    padding-top: 10px;
+}
+
 .card-image {
     padding-bottom: 10px;
-    background-image: url("../documentos/imgs/DBZ.jpg");
+    background-image: url("../../documentos/imgs/DBZ.jpg");
     background-position: center center;
     background-size: 340px 370px;
     width: 350px;
@@ -52,4 +56,8 @@ h4 {
 
 p {
     padding: 10px;
+}
+
+audio {
+    width: 100%;
 }
